tests/NormalTests/paczka2/big_fuzzy/38748348.err
Error in line 3: miFLY1MwJ3f S762 66,7
Error in line 10: miFLY1MwJ3f A482 1,73
Error in line 7: gQIGxow6FpD A20 50,6
Error in line 13: gQIGxow6FpD S762 41,6
Error in line 18: Lok A20 24,3
Error in line 22: Lok A584 38,4
Error in line 16: rrh A482 8,1
Error in line 23: Lok A482 57,1
Error in line 41: rrh A584 25,1
Error in line 38: r1UZYpZGn A482 83,5
Error in line 46: r1UZYpZGn S762 69,1
Error in line 53: Sek5LxXw3 A20 30,9
Error in line 62: Sek5LxXw3 A584 18,3
Error in line 71: A584 S762 98,1
Error in line 58: miFLY1MwJ3f A482 19,9
Error in line 80: Lok A584 57,0
Error in line 74: r1UZYpZGn A482 249,9
Error in line 73: A584 A584 83,4
Error in line 86: A584 S762 19,5
Error in line 89: A584 A482 18,0
Error in line 78: miFLY1MwJ3f A20 16,9
Error in line 97: Lok A48{ 51,6
Error in line 91: Lok A20 99,6
Error in line 116: gQIGxow6FpD S762 6,5
Error in line 120: r1UZYpZGn A482 49,1
Error in line 101: Lok A482 148,6
Error in line 136: r1UZYpZGn A584 72,3
Error in line 140: r1UZYpZGn A482 51,9
Error in line 143: Lok A20 48,1
Error in line 148: miFLY1MwJ3f A20 57,9
Error in line 153: r1UZYpZGn A20 16,1
Error in line 149: Lok S762 13,3
Error in line 158: Lok A482 12,0
Error in line 159: Lok S762 6,9
Error in line 179: A584 A482 6,x
Error in line 169: A584 A584 31,3
Error in line 183: gQIGxow6FpD AL84 16L,0
Error in line 180: Lok S762 1,3
Error in line 181: Sek5LxXw3 A584 64,7
Error in line 216: miFLY1MwJ3f S762 39,5
Error in line 228: A584 A20 47,0
Error in line 234: Lok A584 22,2
Error in line 219: miFLY1MwJ3f A20 48,9
Error in line 240: gQIGxow6FpD A20 6,5
